Version 2 (xx-FEB-2006)
--------

- prog/cy8c2prog.c: programmer can now also be invoked without any operation,
  in which case it will only establish communication and retrieve the IDs
- prog/cy8c2prog.c: new erase device only option -e
- prog/cy8c2prog.c: new option -z to skip read-protected blocks when reading or
  comparing
- prog/cy8c2prog.c: now also retrieves the silicon revision (experimental)
- prog/cy8c2prog.c: restructured the code
- proc/README: documented that programmers with hard-coded vectors aren't
  supported
- Makefile: didn't stop on errors in subdirectories
- libfdr/: added red-black trees by James S. Plank
- as/: added an assembler (experimental and untested)

Version 1 (15-FEB-2006)
---------

- waspic: schematic uses transistor symbols with correct pin information,
  removed BC337.sym and pic16LF88.sym, and updated the READMEs
- waspic: added "project", which guides the operation of gsch2pcb
- prog/Makefile: moved common settings to top-level Common.make, and added
  -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wshadow
  -Werror to CFLAGS
- moved prog/file.[ch] to shared/
- shared/file.[ch]: added support for reading and writing ROM files
- shared/file.c: Intel HEX file records now output with \n, not \r\n, as record
  terminator
- shared/file.c: added full support for security data and cleaned up confusion
  with checksum data
- shared/file.[ch]: program and security data size now has byte granularity,
  and no automatic padding occurs
- cy8c2prog: files are now only padded to full blocks when writing
- cy8c2prog: added support for writing security data
- cy8c2prog: added detection of error codes returned by SSC when reading
- cy8c2prog: new option -i to write an Intel HEX file, changed the default to
  "ROM"
- cy8c2prog: default isn't as silent as README claimed; added option -q to make
  it so (i.e., to suppress progress bars)
- dasm/: added a disassembler
- improved the READMEs a little