@@ -18,6 +18,7 @@ struct loc {
 };
 
 extern struct loc current_loc;
+extern int allow_extensions;
 
 
 void set_file(char *name);
@@ -28,8 +29,10 @@ void __attribute__((noreturn)) lerrorf(const struct loc *loc,const char *fmt,
   ...);
 void __attribute__((noreturn)) yyerror(const char *s);
 void __attribute__((noreturn)) yyerrorf(const char *fmt,...);
-void __attribute__((noreturn)) extension(const char *name);
-void __attribute__((noreturn)) extensions(const char *name);
+void __attribute__((noreturn)) no_extension(const char *name);
+void __attribute__((noreturn)) no_extensions(const char *name);
+#define extension(name) (allow_extensions ? 0 : (no_extension(name), 0))
+#define extensions(name) (allow_extensions ? 0 : (no_extensions(name), 0))
 
 void error_init(void);
 void error_cleanup(void);
