@@ -10,5 +10,6 @@ there:
 	mov	X,there
 EOF
 expect <<EOF
-40 77 6F 72 6C 64 00 50 01 57 07
+40 77 6F 72 6C 64 00 50
+01 57 07
 EOF
