@@ -10,5 +10,6 @@ there:
 	mov	X,there
 EOF
 expect <<EOF
-40 48 65 6C 6C 6F 2C 20 50 01 57 08
+40 48 65 6C 6C 6F 2C 20
+50 01 57 08
 EOF
