@@ -10,5 +10,6 @@ there:
 	mov	X,there
 EOF
 expect <<EOF
-40 00 FF 04 06 80 00 50 01 57 07
+40 00 FF 04 06 80 00 50
+01 57 07
 EOF
