@@ -10,5 +10,6 @@ there:
 	mov	X,there
 EOF
 expect <<EOF
-40 FF 00 06 04 00 80 50 01 57 07
+40 FF 00 06 04 00 80 50
+01 57 07
 EOF
