@@ -17,7 +17,7 @@ expect()
 check_result()
 {
     diff -u -w _ref _out >_diff || {
-	echo FAILED 1>&2
+	echo FAILED "($SCRIPT)" 1>&2
 	cat _diff 1>&2
 	rm -f _ref _out _diff
 	exit 1
@@ -31,7 +31,7 @@ check_result()
 m8cdasm()
 {
     ../m8cdasm "$@" >_out || {
-	echo FAILED 1>&2
+	echo FAILED "($SCRIPT)" 1>&2
 	rm -f _ref _out
 	exit 1
     }
@@ -42,7 +42,7 @@ m8cdasm()
 m8cdasm_fail()
 {
     ../m8cdasm "$@" >_out 2>&1 && {
-	echo FAILED 1>&2
+	echo FAILED "($SCRIPT)" 1>&2
 	rm -f _ref _out
 	exit 1
     }
